Converted UI defaults to rem units; fixed vertical middle alignment for status bar.

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -72,17 +72,16 @@
 @font-size: .75rem; // 12px (.75 of standard 16px)
 @input-font-size: 1.17rem; // 14px
 
-@disclosure-arrow-size: 12px;
+@disclosure-arrow-size: 1rem;
 
 @component-padding: .75rem;
-@component-icon-padding: 5px;
-@component-icon-size: 16px;
-@component-line-height: 25px;
+@component-icon-padding: .417rem; // 5px
+@component-icon-size: 1.3rem; // 16px
+@component-line-height: 2.1rem; // 25px
 
 @tab-height: 2.1rem; // 25px
-@tab-width: 175px; // TODO: REMOVE
 @tab-min-width: 7rem;
 @tab-max-width: 22rem;
 
 // Misc
-@component-border-radius: 2px;
+@component-border-radius: .17rem;
